--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -67,6 +67,16 @@ body {
   }
 }
 
+.product-search-input {
+  text-align: center;
+  margin-bottom: 60px;
+}
+
+.product-search-empty {
+  text-align: center;
+  font-size: 22px;
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
