--- a/app/views/products.html
+++ b/app/views/products.html
@@ -1,12 +1,34 @@
 <div class="row">
-    <div class="product-search">
-        <div class="col-md-4 col-md-offset-4">
+    <div class="product-search-input">
+        <div class="col-md-6 col-md-offset-3">
             <div class="form-inline">
                 <div class="form-group">
                     <input type="text" class="form-control" ng-model="productQuery">
                 </div>
-                <button type="submit" class="btn btn-primary">Search</button>
+                <button type="submit" class="btn btn-primary" ng-click="getProducts(productQuery)">Search</button>
             </div>
+        </div>
+    </div>
+    <div class="product-search-results" ng-if="hasSearched">
+        <p ng-if="products.length">Total Results: {{productTotal}}</p>
+        <table class="table table-hover" ng-if="products.length">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Product Name</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="product in products">
+                    <td><img src="{{product.thumbnailImage}}" alt=""></td>
+                    <td><a href="#/products/{{product.itemId}}">{{product.name}}</a></td>
+                    <td>{{product.salePrice | currency}}</td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="product-search-empty" ng-if="!products.length">
+            <p>No products matched your search!</p>
         </div>
     </div>
 </div>
